fixed dark mode

--- a/dark.css
+++ b/dark.css
@@ -12,9 +12,51 @@ body{
     color: rgb(0, 73, 0);
 }
 
+a{
+    margin: 0 4vh;
+    text-align: center;
+}
+
+#banner{
+    text-align: center;
+    margin-top: 2%;
+}
+
+.banner-image{
+    width: 40vw;
+}
+
+.container{
+    text-align: center;
+    margin-bottom: 10vh;
+    margin-top: 5vh;
+}
+
+.card{
+    margin-top: 5%;
+    margin-bottom: 5%;
+    border: 0;
+    text-align: center;
+}
+
+.card-img-top{
+    border-radius: 0%;
+    min-height: 25vh;
+    max-height: 25vh;
+}
+
 .card-body{
     background-color: #145422;
     color: white;
+}
+
+.form-check{
+    text-align: left;
+}
+
+#skittle{
+    width: 100%;
+    height: 70%;
 }
 
 .btn{
@@ -32,3 +74,8 @@ footer{
     background-color: #0C3710;
     color: white;
 }
+
+p{
+    margin: 0;
+}
+
